--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,12 +19,12 @@
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePictureVw"
-                android:layout_marginTop="225dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars"
+                android:layout_marginTop="200dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/kenobi"
                 android:contentDescription="@string/empty" />
 
             <EditText
