--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -81,37 +81,37 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/editProfileBtn"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="92dp"
                     android:layout_height="30dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
                     android:background="@drawable/green_btn"
                     android:text="@string/edit"
-                    android:textSize="12sp"
-                    android:layout_marginRight="5dp"
                     android:textColor="@color/white"
-                    tools:targetApi="lollipop"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_marginEnd="5dp" />
+                    android:textSize="12sp"
+                    tools:targetApi="lollipop" />
 
                 <Button
                     android:id="@+id/logoutBtn"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="92dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="12sp"
+                    android:layout_marginStart="5dp"
 
+                    android:layout_marginLeft="5dp"
                     android:background="@drawable/red_btn"
                     android:text="@string/log_out"
                     android:textColor="@color/white"
-                    tools:targetApi="lollipop"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_marginStart="5dp" />
+                    android:textSize="12sp"
+                    tools:targetApi="lollipop" />
             </LinearLayout>
 
         </LinearLayout>
