--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -90,6 +90,14 @@
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
+            <ProgressBar
+                android:id="@+id/progressBarTwo"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:visibility="gone" />
+
         </LinearLayout>
     </ScrollView>
 
